SERVER-115962 Balancer must progress when the most loaded shard is already balanced within its zones (#45948)

GitOrigin-RevId: 96fa001fc341864dee625501d849ed7ab6c675dd